--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ footer {
   margin-top: 10px;
 }
 
+.v-cover{
+  position: absolute;
+  
+}
+
 .years {
   font-size: 21px;
   fill: #aaa;
@@ -67,7 +72,7 @@ footer {
 	/* color: #eeeeee; */
   color: black;
 	padding: 10px;
-	width: 300px;
+	width: 150px;
 	font-size: 12px;
 	z-index: 10;
 }
