--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,12 @@ text.title {
 }
 
 text.investor.odd {
-  font-size: 40px;
+  font-size: 24px;
   fill: #02020A;
 }
 
 text.investor.even {
-  font-size: 40px;
+  font-size: 24px;
   /*fill: #7798AB;*/
   fill: #5A7D7C;
 }
@@ -61,20 +61,27 @@ footer {
 
 .tooltip {
 	position: absolute;
-	top: 100px;
-	left: 100px;
-  -moz-border-radius:5px;
-	border-radius: 5px;
-  border: 2px solid #000;
+	top: 160px;
+	left: 1200px;
+  /*-moz-border-radius:5px;
+	border-radius: 5px;*/
+  /*border: 2px solid #000;*/
 	/* background: #222222; */
-  background: #fff;
+  /*background: #fff;*/
 	opacity: .9;
 	/* color: #eeeeee; */
   color: black;
-	padding: 10px;
+	padding: 15px;
 	width: 150px;
-	font-size: 12px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 400;
+	font-size: 24px;
+
 	z-index: 10;
+}
+
+.tooltip span{
+  line-height: 105%;
 }
 
 .tooltip .title {
